@@ -9,3 +9,15 @@ https://stackoverflow.com/questions/25205113/how-to-change-the-version-of-the-de
 ```
 rm -rf $HOME/.gradle/caches/
 ```
+
+# custom properties
+gradle.properties
+
+```
+org.gradle.daemon=true
+#org.gracle.jvmargs=-Xmx4096m
+
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+```
